# FelixEngine

./: .gitignore
FelixEngine.xcworkspace/: contents.xcworkspacedata
FelixEngine/FelixEngine/: Application.cpp  Application.h  Engine.h  Engine.m  FelixEngine.h  USDTypes.h
FelixEngine/FelixEngine.xcodeproj/: project.pbxproj
FelixEngine/FelixEngine/Scene/: ARCamera.cpp  ARCamera.h  ARVideo.cpp  ARVideo.h  Camera.cpp  Camera.h  Drawable.h  Light.cpp  Light.h  LightRig.cpp  LightRig.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MotionCamera.cpp  MotionCamera.h  Object.cpp  Object.h  PbrMaterial.cpp  PbrMaterial.h  PhongMaterial.cpp  PhongMaterial.h  RenderItem.cpp  RenderItem.h  RenderPass.cpp  RenderPass.h  RenderPasses.cpp  RenderPasses.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  StdMaterial.cpp  StdMaterial.h  iObject.h
FelixEngine/FelixEngine/Utilities/: IndexedMap.h  Macros.h  Matrix.h  Quaternion.h  StringUtils.h  Transform.h  Variant.h  Vector.h  XMLTree.h
FelixEngine/FelixEngine/iOS/: AppViewController.h  AppViewController.m  iOSViewController.h  iOSViewController.mm
OldRepoBackup/: README.md
OldRepoBackup/Source/FelixEngine/: Component.h  Condition.h  EventHandler.cpp  EventHandler.h  FelixEngine.h  GLBuffer.h  GLGraphicSystem.cpp  GLGraphicSystem.h  GLMesh.h  GLShader.h  GLUniformMap.h  GLUniforms.h  GraphicResources.h  GraphicTask.h  IndexedMap.h  MTLFrame.mm  MTLGraphicResources.h  MTLGraphicSystem.h  MTLMesh.mm  MTLUniformMap.m  Matrix.h  MeshLoader.cpp  MeshLoader.h  Model.h  Pool.h  Projection.h  Quaternion.h  RenderSlots.h  Resource.h  Resources.h  SDLEventSystem.cpp  SDLEventSystem.h  Sampler.h  TaskGroup.cpp  TextureLoader.h  Transform.h  Variant.h  Vector.h
OldRepoBackup/Source/HelloFelix/: main.cpp
OldRepoBackup/Source/ModelViewer/: ViewerCamera.cpp  ViewerCamera.h
Plugins/Blender/io_export_felix/: __init__.py  export_felix.py
Plugins/Blender/testing/: TestFelixExport.blend  TestFelixExport.py
Projects/ARPlaneDetect/ARPlaneDetect/: ARPlaneDetect.cpp  ARPlaneDetect.h  AppDelegate.h  AppDelegate.m  Info.plist  Scene.xml  Shaders.metal  ViewController.h  ViewController.mm  main.m
Projects/ARPlaneDetect/ARPlaneDetect.xcodeproj/: project.pbxproj
Projects/ARPoints/ARPoints/: ARPoints.cpp  ARPoints.h  AppDelegate.h  AppDelegate.m  Info.plist  Shaders.metal  ViewController.h  ViewController.mm  main.m
Projects/ARPoints/ARPoints.xcodeproj/: project.pbxproj
Projects/ARScanner/ARScanner/: ARScanner.cpp  ARScanner.h  AppDelegate.h  AppDelegate.m  Info.plist  Scene.xml  ViewController.h  ViewController.mm  main.m
Projects/ARScanner/ARScanner.xcodeproj/: project.pbxproj
Projects/ARTracker/ARTracker/: ARTracker.cpp  ARTracker.h  AppDelegate.h  Info.plist  (+6 more)
Projects/ARTracker/ARTracker.xcodeproj/: project.pbxproj
Projects/Vulkan00_HelloVK/: debug.sh
Projects/Vulkan00_HelloVK/src/: CMakeLists.txt  VulkanDevice.cpp  VulkanIncludes.hpp  VulkanInstance.cpp  main.cpp
Projects/Vulkan01_Compute/src/: CMakeLists.txt  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanDevice.cpp  VulkanIncludes.hpp  VulkanInstance.cpp  VulkanLayout.cpp  VulkanMemory.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanSetLayout.cpp  copy.comp  main.cpp
Projects/Vulkan02_DrawImage/: debug.sh
Projects/Vulkan02_DrawImage/src/: CMakeLists.txt  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanIncludes.hpp  VulkanLayout.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanSetLayout.cpp  VulkanShader.cpp  clear.comp  clearTexture.comp  desaturate.comp  main.cpp
Projects/Vulkan03_DrawTriangle/: configure.sh  debug.sh
Projects/Vulkan03_DrawTriangle/src/: CMakeLists.txt  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanDevice.cpp  VulkanFrameBuffer.cpp  VulkanImage.cpp  VulkanIncludes.hpp  VulkanLayout.cpp  VulkanLayoutSet.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanSetLayout.cpp  VulkanShader.cpp  clearBuffer.comp  main.cpp  vertexInstanced.vert  vertexLayout.vert  vertexUniform.vert
Projects/Vulkan04_HelloSDL/: debug.sh
Projects/Vulkan05_ResizeSDL/: debug.sh
Projects/Vulkan06_VKProject/: CMakeLists.txt  clean.sh  clear.sh  test.sh
Projects/Vulkan06_VKProject/shaders/: copy.comp  texture.frag
Projects/Vulkan06_VKProject/src/: CMakeLists.txt  Matrix.hpp  Quaternion.hpp  main.cpp
Projects/Vulkan06_VKProject/src/graphics/: CMakeLists.txt  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanDevice.cpp  VulkanFrameBuffer.cpp  VulkanFrameSync.cpp  VulkanImage.cpp  VulkanInstance.cpp  VulkanLayout.cpp  VulkanLayoutSet.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanQueue.cpp  VulkanRenderPass.cpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanSwapChain.cpp
Projects/Vulkan06_VKProject/src/graphics/include/: VulkanBuffer.hpp  VulkanCommand.hpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanFrameSync.hpp  VulkanImage.hpp  VulkanIncludes.hpp  VulkanInstance.hpp  VulkanLayout.hpp  VulkanLayoutSet.hpp  VulkanMesh.hpp  VulkanPipeline.hpp  VulkanQueue.hpp  VulkanRenderPass.hpp  VulkanSampler.hpp  VulkanShader.hpp  VulkanSwapChain.hpp  VulkanTypes.hpp
Projects/Vulkan06_VKProject/src/shaders/: vertexUV.vert
Projects/Vulkan06_VKProject/tests/: CMakeLists.txt  graphics_test.cpp
Projects/Vulkan06_VKProject/tests/graphics/: TestVulkanBuffer.cpp  TestVulkanDevice.cpp  TestVulkanInstance.cpp  TestVulkanQueue.cpp
Projects/Xcode/: .gitignore
Source/FelixEngine/: Buffer.h  BufferMap.h  Camera.h  Color.h  Component.cpp  Component.h  Delegate.h  Event.h  EventHandler.cpp  EventHandler.h  EventSystem.cpp  EventSystem.h  FelixEngine.cpp  FelixEngine.h  FileSystem.h  FileSystem.mm  FixedQueue.h  GCDTaskingSystem.cpp  GCDTaskingSystem.h  GLBuffer.h  GLContext.cpp  GLContext.h  GLFrame.cpp  GLFrame.h  GLGraphicSystem.cpp  GLGraphicSystem.h  GLMesh.cpp  GLMesh.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLUniformMap.h  GLUniforms.h  GLWindow.cpp  GLWindow.h  GpuSystem.cpp  GpuSystem.h  GraphicResources.cpp  GraphicResources.h  (+96 more)
Source/HelloFelix/: main.cpp
Source/ModelViewer/: ViewerCamera.cpp  ViewerCamera.h  main.cpp
(+321 files in other folders)
